src/test/deca/syntax/valid/synt/string_with_accent.deca
/*
    Description : Test pour voir si une chaine contenant des accents est acceptée

    Résultat : OK
*/
{
    println("Héllo");
}